--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
     ports:
-      - "${PUBLIC_PORT:-80}:80"
-      - "8080:8080"  # Traefik Dashboard (nur lokal)
+      - "0.0.0.0:${PUBLIC_PORT:-80}:80"  # Bind auf allen Interfaces
+      - "0.0.0.0:8080:8080"  # Traefik Dashboard auf allen Interfaces
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
