fix: Update Supabase Studio image to latest tag
The specific tag 20240729-ce3163f is no longer available on Docker Hub.
Using :latest tag instead for stable deployment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -206,7 +206,7 @@ services:
   # SUPABASE STUDIO (Database UI)
   # =================================
   studio:
-    image: supabase/studio:20240729-ce3163f
+    image: supabase/studio:latest
     container_name: kontakte-studio
     environment:
       STUDIO_PG_META_URL: http://postgres:5432
