fix: Set HOME=/tmp in Dockerfile to avoid QNAP permission errors
Docker build was failing with 'permission denied' when trying to create
directories in /share/CACHEDEV1_DATA/.qpkg/container-station/homes/tom.
Setting HOME=/tmp redirects all home directory operations to /tmp.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,41 +1,48 @@
 # Build Stage
-FROM node:20-alpine AS builder
+FROM node:20-alpine AS base
 
+# Install dependencies only when needed
+FROM base AS deps
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
+# Set HOME to avoid permission issues
+ENV HOME=/tmp
+
+COPY package.json package-lock.json* ./
 RUN npm ci
 
-# Copy source
-COPY . .
-
-# Build
-ENV NEXT_TELEMETRY_DISABLED 1
-RUN npm run build
-
-# Production Stage
-FROM node:20-alpine AS runner
-
+# Rebuild the source code only when needed
+FROM base AS builder
 WORKDIR /app
 
-ENV NODE_ENV production
-ENV NEXT_TELEMETRY_DISABLED 1
+ENV HOME=/tmp
+ENV NEXT_TELEMETRY_DISABLED=1
 
-# Create user
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
 
-# Copy from builder
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
+RUN npm run build
+
+# Production image
+FROM base AS runner
+WORKDIR /app
+
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
+ENV HOME=/tmp
+
+RUN addgroup --system --gid 1001 nodejs && \
+    adduser --system --uid 1001 nextjs
+
+COPY --from=builder --chown=nextjs:nodejs /app/public ./public
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
 
 EXPOSE 3000
 
-ENV PORT 3000
-ENV HOSTNAME "0.0.0.0"
+ENV PORT=3000
+ENV HOSTNAME="0.0.0.0"
 
 CMD ["node", "server.js"]
