fix: Decouple docker build from compose to fix QNAP permissions
- docker-compose.yml: Consumes local 'fvw-web:local' image
- deploy-qnap.sh: Manually builds 'fvw-web:local' before up
- Bypasses QNAP Container Station 'mkdir permission denied' bug during compose build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -233,9 +233,8 @@ services:
   # WEB FRONTEND (Next.js)
   # =================================
   web:
-    build:
-      context: ./apps/web
-      dockerfile: Dockerfile
+    image: fvw-web:local
+    pull_policy: never
     container_name: kontakte-web
     environment:
       NEXT_PUBLIC_SUPABASE_URL: http://${HOST_IP}:${PUBLIC_PORT}/api
