fix: Use npm install instead of npm ci in Dockerfile
'npm ci' fails if package-lock.json is missing or out of sync.
'npm install' is more robust for the QNAP deployment context.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -9,7 +9,7 @@ ENV NPM_CONFIG_CACHE=/tmp/.npm
 FROM base AS deps
 WORKDIR /app
 COPY package.json package-lock.json* ./
-RUN npm ci
+RUN npm install
 
 # Rebuild the source code only when needed
 FROM base AS builder
