--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,38 +2,35 @@
     "name": "@fvw/web",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint",
-        "type-check": "tsc --noEmit"
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
     },
     "dependencies": {
-        "next": "^14.2.18",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "@supabase/supabase-js": "^2.47.10",
-        "@tanstack/react-query": "^5.62.7",
-        "zustand": "^5.0.2",
-        "zod": "^3.24.1",
-        "react-hook-form": "^7.54.2",
-        "@hookform/resolvers": "^3.9.1",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "tailwind-merge": "^2.6.0",
-        "lucide-react": "^0.468.0",
-        "date-fns": "^4.1.0"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.3",
+        "@supabase/supabase-js": "^2.39.8",
+        "@tanstack/react-query": "^5.28.4",
+        "clsx": "^2.1.0",
+        "tailwind-merge": "^2.2.2",
+        "lucide-react": "^0.363.0",
+        "date-fns": "^3.6.0"
     },
     "devDependencies": {
-        "@types/node": "^22",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "typescript": "^5",
+        "@types/react": "^18.2.66",
+        "@types/react-dom": "^18.2.22",
+        "@types/node": "^20.11.28",
+        "@typescript-eslint/eslint-plugin": "^7.2.0",
+        "@typescript-eslint/parser": "^7.2.0",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.18",
+        "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
-        "postcss": "^8",
-        "autoprefixer": "^10.0.1",
-        "eslint": "^8",
-        "eslint-config-next": "^14.2.18"
+        "typescript": "^5.2.2",
+        "vite": "^5.2.0"
     }
 }
