--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,50 +1,40 @@
 {
     "compilerOptions": {
         "target": "ES2020",
+        "useDefineForClassFields": true,
         "lib": [
-            "dom",
-            "dom.iterable",
-            "esnext"
+            "ES2020",
+            "DOM",
+            "DOM.Iterable"
         ],
-        "allowJs": true,
+        "module": "ESNext",
         "skipLibCheck": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "noEmit": true,
-        "esModuleInterop": true,
-        "module": "esnext",
+        /* Bundler mode */
         "moduleResolution": "bundler",
+        "allowImportingTsExtensions": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "jsx": "preserve",
-        "incremental": true,
-        "plugins": [
-            {
-                "name": "next"
-            }
-        ],
+        "noEmit": true,
+        "jsx": "react-jsx",
+        /* Linting */
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+        /* Paths */
+        "baseUrl": ".",
         "paths": {
             "@/*": [
                 "./src/*"
-            ],
-            "@/components/*": [
-                "./src/components/*"
-            ],
-            "@/lib/*": [
-                "./src/lib/*"
-            ],
-            "@/hooks/*": [
-                "./src/hooks/*"
             ]
         }
     },
     "include": [
-        "next-env.d.ts",
-        "**/*.ts",
-        "**/*.tsx",
-        ".next/types/**/*.ts"
+        "src"
     ],
-    "exclude": [
-        "node_modules"
+    "references": [
+        {
+            "path": "./tsconfig.node.json"
+        }
     ]
 }
