--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -5,34 +5,27 @@ WORKDIR /app
 COPY package.json package-lock.json* ./
 RUN npm install
 
-# Copy source
 COPY . .
-
-# Build for production
 RUN npm run build
 
-# Production Stage (Nginx)
+# Production Stage
 FROM nginx:alpine
 
-# Copy built assets
+# Copy built files
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copy Nginx config
+# Copy nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Script to inject env vars at runtime
-COPY <<EOF /docker-entrypoint.d/40-env-config.sh
-#!/bin/sh
-cat <<JS > /usr/share/nginx/html/config.js
-window.__env__ = {
-  VITE_SUPABASE_URL: "\${NEXT_PUBLIC_SUPABASE_URL}",
-  VITE_SUPABASE_ANON_KEY: "\${NEXT_PUBLIC_SUPABASE_ANON_KEY}"
-};
-JS
-EOF
-
-RUN chmod +x /docker-entrypoint.d/40-env-config.sh
+# Create env injection script
+RUN echo '#!/bin/sh' > /docker-entrypoint.d/40-env-config.sh && \
+  echo 'cat > /usr/share/nginx/html/config.js << EOF' >> /docker-entrypoint.d/40-env-config.sh && \
+  echo 'window.__env__ = {' >> /docker-entrypoint.d/40-env-config.sh && \
+  echo '  VITE_SUPABASE_URL: "${NEXT_PUBLIC_SUPABASE_URL}",' >> /docker-entrypoint.d/40-env-config.sh && \
+  echo '  VITE_SUPABASE_ANON_KEY: "${NEXT_PUBLIC_SUPABASE_ANON_KEY}"' >> /docker-entrypoint.d/40-env-config.sh && \
+  echo '};' >> /docker-entrypoint.d/40-env-config.sh && \
+  echo 'EOF' >> /docker-entrypoint.d/40-env-config.sh && \
+  chmod +x /docker-entrypoint.d/40-env-config.sh
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
