--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:20-alpine AS builder
 
 WORKDIR /app
-COPY package.json package-lock.json* ./
+COPY package*.json ./
 RUN npm install
 
 COPY . .
@@ -18,14 +18,18 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Create env injection script
-RUN echo '#!/bin/sh' > /docker-entrypoint.d/40-env-config.sh && \
-  echo 'cat > /usr/share/nginx/html/config.js << EOF' >> /docker-entrypoint.d/40-env-config.sh && \
-  echo 'window.__env__ = {' >> /docker-entrypoint.d/40-env-config.sh && \
-  echo '  VITE_SUPABASE_URL: "${NEXT_PUBLIC_SUPABASE_URL}",' >> /docker-entrypoint.d/40-env-config.sh && \
-  echo '  VITE_SUPABASE_ANON_KEY: "${NEXT_PUBLIC_SUPABASE_ANON_KEY}"' >> /docker-entrypoint.d/40-env-config.sh && \
-  echo '};' >> /docker-entrypoint.d/40-env-config.sh && \
-  echo 'EOF' >> /docker-entrypoint.d/40-env-config.sh && \
-  chmod +x /docker-entrypoint.d/40-env-config.sh
+RUN cat > /docker-entrypoint.d/40-env-config.sh << 'EOF'
+#!/bin/sh
+set -e
+cat > /usr/share/nginx/html/config.js << JSEOF
+window.__env__ = {
+VITE_SUPABASE_URL: "${VITE_SUPABASE_URL:-http://localhost:54321}",
+VITE_SUPABASE_ANON_KEY: "${VITE_SUPABASE_ANON_KEY:-dummy-key}"
+};
+JSEOF
+EOF
+
+RUN chmod +x /docker-entrypoint.d/40-env-config.sh
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
