--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -15,19 +15,16 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 # Copy nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Create startup script
-RUN cat > /start.sh << 'EOF'
-#!/bin/sh
-cat > /usr/share/nginx/html/config.js << JSEOF
-window.__env__ = {
-VITE_SUPABASE_URL: "${VITE_SUPABASE_URL:-http://localhost:54321}",
-VITE_SUPABASE_ANON_KEY: "${VITE_SUPABASE_ANON_KEY:-dummy-key}"
-};
-JSEOF
-exec nginx -g "daemon off;"
-EOF
-
-RUN chmod +x /start.sh
+# Create startup script with echo instead of heredoc
+RUN echo '#!/bin/sh' > /start.sh && \
+    echo 'cat > /usr/share/nginx/html/config.js << "JSEOF"' >> /start.sh && \
+    echo 'window.__env__ = {' >> /start.sh && \
+    echo '  VITE_SUPABASE_URL: "${VITE_SUPABASE_URL:-http://localhost:54321}",' >> /start.sh && \
+    echo '  VITE_SUPABASE_ANON_KEY: "${VITE_SUPABASE_ANON_KEY:-dummy-key}"' >> /start.sh && \
+    echo '};' >> /start.sh && \
+    echo 'JSEOF' >> /start.sh && \
+    echo 'exec nginx -g "daemon off;"' >> /start.sh && \
+    chmod +x /start.sh
 
 EXPOSE 80
 CMD ["/start.sh"]
