--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -15,16 +15,9 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 # Copy nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Create startup script - use single quotes for outer, double for variables
-RUN echo '#!/bin/sh' > /start.sh && \
-    echo 'cat > /usr/share/nginx/html/config.js << JSEOF' >> /start.sh && \
-    echo 'window.__env__ = {' >> /start.sh && \
-    echo '  VITE_SUPABASE_URL: "'"${VITE_SUPABASE_URL:-http://localhost:54321}"'",' >> /start.sh && \
-    echo '  VITE_SUPABASE_ANON_KEY: "'"${VITE_SUPABASE_ANON_KEY:-dummy-key}"'"' >> /start.sh && \
-    echo '};' >> /start.sh && \
-    echo 'JSEOF' >> /start.sh && \
-    echo 'exec nginx -g "daemon off;"' >> /start.sh && \
-    chmod +x /start.sh
+# Copy startup script
+COPY start.sh /start.sh
+RUN chmod +x /start.sh
 
 EXPOSE 80
 CMD ["/start.sh"]
