fix: Change env vars from NEXT_PUBLIC to VITE in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -236,8 +236,8 @@ services:
     pull_policy: never
     container_name: kontakte-web
     environment:
-      NEXT_PUBLIC_SUPABASE_URL: http://${HOST_IP}:${PUBLIC_PORT}/api
-      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${ANON_KEY}
+      VITE_SUPABASE_URL: ${SUPABASE_URL}
+      VITE_SUPABASE_ANON_KEY: ${ANON_KEY}
       HOME: /tmp
     depends_on:
       - postgrest
