fix: Disable caching for config.js in nginx to ensure updates propagate

--- a/deploy_bundle/apps/web/nginx.conf
+++ b/deploy_bundle/apps/web/nginx.conf
@@ -9,6 +9,12 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # config.js must not be cached
+    location = /config.js {
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
+    }
+
     # Optional: Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
